--- a/Talabat.APIs/appsettings.json
+++ b/Talabat.APIs/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  {
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=.;Database=Talabat.APIs;Trusted_Connection=True;"
+    }
+  }
+  }
 }
