--- a/Talabat.APIs/appsettings.json
+++ b/Talabat.APIs/appsettings.json
@@ -1,4 +1,4 @@
-{
+ {
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,10 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  {
-    "ConnectionStrings": {
-      "DefaultConnection": "Server=.;Database=Talabat.APIs;Trusted_Connection=True;TrustServerCertificate = true"
-    }
-  }
+  "ConnectionStrings": {
+    "DefaultConnection": "Server = .; Database = Talabat.APIs; Trusted_Connection = true; TrustServerCertificate = true"
   }
 }
