--- a/Talabat.APIs/appsettings.json
+++ b/Talabat.APIs/appsettings.json
@@ -1,12 +1,13 @@
- {
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server = .; Database = Talabat.APIs; Trusted_Connection = true; TrustServerCertificate = true"
-  }
+  },
+  "AllowedHosts": "*",
+  "ApiBaseUrl": "https://localhost:7052"
 }
