--- a/Talabat.APIs/appsettings.json
+++ b/Talabat.APIs/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server = .; Database = Talabat.APIs; Trusted_Connection = true; TrustServerCertificate = true"
+    "DefaultConnection": "Server = .; Database = Talabat.APIs; Trusted_Connection = true; TrustServerCertificate = true",
+    "Redis": "localhost"
   },
   "AllowedHosts": "*",
   "ApiBaseUrl": "https://localhost:7052"
